add CRUD functionality for users and add new user form to view

--- a/time-tracker-2/public/css/style.css
+++ b/time-tracker-2/public/css/style.css
@@ -6,6 +6,10 @@
     margin-right: 15px;
 }
 
+.navbar {
+  padding-top: 10px;
+}
+
 @media (min-width: 546px) {
     .time-entry-comment {
         position: relative;
